# Edu_PICO

./: README.md
_0_introduction/: CMakelists.txt  main.cpp
_0_introduction/include/: draft.hpp
_1-pico_test/: CMakeLists.txt  main.c
